@@ -1,4 +1,6 @@
 DIST farsight2-0.0.14.tar.gz 1054752 RMD160 5f8816831fb6790c3185479cca43713fd552d4cd SHA1 2f8b382747efb467cdb9acd833bb88fe9bf02dc8 SHA256 88337ceb368ffb2afa46bd8166352ee594573d7580a936010a01be542d8d4a84
+DIST farsight2-0.0.15.tar.gz 1055749 RMD160 07669ad971096d31f6b192338982bc6888de2b10 SHA1 7edecfce0d3849ffceb6324a6ca63929338b4ccb SHA256 efc4aa28e0720f1c08f6179d40d436968a0a281a85b585bbb1694e5bd24f8ba3
 EBUILD farsight2-0.0.14.ebuild 1210 RMD160 f78cb36d576e20c737d9d78c345fe2fe75909a5e SHA1 2b87b254fe803f2d6316b8808db814969e526844 SHA256 0fc457cea0a7239cccefce0376bd919682c8f11368e8a5a2b0db33d5250393a7
-MISC ChangeLog 1382 RMD160 18a42a3fde01061c0ea45f031b60a2ff2cc9f919 SHA1 bd3464b53763bdf22b6acaff6244f8ec4b514379 SHA256 9c1d21877a1b39197514d54d35ab063f02bcd9bbb8031118c43cadc2559c82ee
+EBUILD farsight2-0.0.15.ebuild 1402 RMD160 86198eea5adb8586f063002c590f2a9865e341df SHA1 23a80753ddce1f82f54730f8bf63a82b521796f7 SHA256 5b02d1a40c8a3d76368e48ac9f8bbd19c08b08b8aa6864ebe1389f4d09e0126c
+MISC ChangeLog 1530 RMD160 49217c468faad0b447600c8e070e74f474d615e5 SHA1 72b50f64e4646f3a94ba80e622f7809a802f6397 SHA256 895bf44c8a1efeb6e4d3c94f68b8d335fecb8cbed2e6e6c582b9424589c4ad50
 MISC metadata.xml 438 RMD160 ea0c3d7720a5a5d5c685b14ec5b4b573bc9ef3bb SHA1 45d110470cb6a81833705c7064aebd10cf4753f5 SHA256 14c573ac5b400e2dec4c5ba811dc707afb2be482ce71f541e75880ce7b946953
